added bootstrap css and changed positions of highscore button and time left button in a separate styles sheet

--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web APIs Quiz</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="timer" ></div>
-    <div class="viewHighScore">
+    <div id="timer">
+        <button type="button" class="btn btn-warning">Time Left: <span>15:00</span></button>
+    </div>
+    <div id="viewHighScore">
         <button type="button" class="btn btn-info">View High Score</button>
     </div>
-    <div class="container">
+    <div class="container align-self-center">
         <div class="row">
             <h1>Coding Quiz Challenge </h1>
         </div>
