--- a/index.html
+++ b/index.html
@@ -97,6 +97,6 @@
         </div>  
         
     </section>
-    <script src="\script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
