--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p>As you proceed in your journey through the industrious applications of horticulture, you will encounter interesting problems you  must solve. Here is a multiple choice quiz to test your preparedness for such skills.</p>
         </div>
         <div class="row">
-            <button type="button" class="btn btn-primary">START QUIZ</button>
+            <button type="button" id=startQuizButton class="btn btn-primary">START QUIZ</button>
         </div>                
     </section>
     <section id="question" style="display: none !important" class="container d-flex flex-column justify-content-center align-items-center">
