added show question function  with innerText method

--- a/index.html
+++ b/index.html
@@ -29,14 +29,16 @@
     </section>
     <section id="question" style="display: none !important" class="container d-flex flex-column justify-content-center align-items-center">
         <div class="row">
-            <h2> Question # </h2>
+            <h2> </h2>
         </div>
         <div class="row">
-            <p>You always need to have growth hormone for your cuttings to produce roots.</p>
+            <p></p>
         </div>
         <div class="row">
-            <button type="button" class="btn btn-primary">TRUE</button>
-            <button type="button" class="btn btn-primary">FALSE</button>
+            <button type="button" id="answerButton1" class="btn btn-primary"></button>
+            <button type="button" id="answerButton2" class="btn btn-primary"></button>
+            <button type="button" id="answerButton3" class="btn btn-primary"></button>
+            <button type="button" id="answerButton4" class="btn btn-primary"></button>
         </div>             
     </section>
     <section id="initials" style="display: none !important" class="container d-flex flex-column justify-content-center align-items-center">
