added a start timer with second subtraction from 100

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="timer" style="display: none">
         <button type="button" class="btn btn-warning">
-            Time Left: <span>##</span> secs
+            Time Left: <span></span> secs
         </button>
     </div>
     <div id="viewHighScore">
