sent from last question to initials page with the current score

--- a/index.html
+++ b/index.html
@@ -46,20 +46,18 @@
             <h2> All done! </h2>
         </div>
         <div class="row">
-            <p>Your final score is <span>#</span></p>
+            <p>Your final score is <span></span></p>
         </div>
         <div class="row">
-            <form>
-                <div class="form-row align-items-center">
-                  <div class="col-auto">
-                    <label class="sr-only" for="inlineFormInput">Initials</label>
-                    <input type="text" class="form-control mb-2" id="inlineFormInput" placeholder="Enter initials">
-                  </div>                  
-                  <div class="col-auto">
-                    <button type="submit" class="btn btn-primary mb-2">Submit</button>
-                  </div>
+            <div class="form-row align-items-center">
+                <div class="col-auto">
+                <label class="sr-only" for="inlineFormInput">Initials</label>
+                <input type="text" class="form-control mb-2" id="inlineFormInput" placeholder="Enter initials">
+                </div>                  
+                <div class="col-auto">
+                <button class="btn btn-primary mb-2">Submit</button>
                 </div>
-            </form>
+            </div>
         </div>
     </section>
     <section id="highScores" style="display: none !important" class="container d-flex flex-column justify-content-center align-items-center">
