--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
               </table>
         </div>
         <div class="row">
-            <a href="/index.html">
+            <a href="">
                 <button type="button" class="btn btn-primary">Go Back</button>
             </a>
-            <button type="button" class="btn btn-primary">Clear Highscores</button>
+            <button type="button" id="clearHighScoresButton" class="btn btn-primary">Clear Highscores</button>
         </div>  
         
     </section>
