added for loop for displaying high scores

--- a/index.html
+++ b/index.html
@@ -73,22 +73,7 @@
                     <th scope="col">Score</th>
                   </tr>
                 </thead>
-                <tbody>
-                  <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                   
-                  </tr>
-                  <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    
-                  </tr>
-                  <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                  </tr>
-                </tbody>
+                <tbody></tbody>
               </table>
         </div>
         <div class="row">
